syntax = "proto3";

import "common/model/model.proto";
import "auth/v1/model/model.proto";

option java_multiple_files = true;
option java_package = "com.voteva.quiz.grpc.model.v1";


message GGetUserTestsRequest {
    GAuthentication authentication = 1;
    GUuid userUid = 2;
}

message GAssignTestRequest {
    GAuthentication authentication = 1;
    GUuid userUid = 2;
    GUuid testUid = 3;
    int32 attemptsAllowed = 4;
}

message GSetTestResultsRequest {
    GAuthentication authentication = 1;
    GUuid userUid = 2;
    GUuid testUid = 3;
    int32 percent = 4;
}

message GGetUserRequest {
    GAuthentication authentication = 1;
    GUuid userUid = 2;
}

message GGetAllUsersRequest {
    GAuthentication authentication = 1;
    GPageable pageable = 2;
}

message GAddUserRequest {
    GAuthentication authentication = 1;
    GUuid userUid = 2;
    string firstName = 3;
    string lastName = 4;
}

message GUpdateUserRequest {
    GAuthentication authentication = 1;
    GUuid userUid = 2;
    string firstName = 3;
    string lastName = 4;
}

message GSetAdminGrantsRequest {
    GAuthentication authentication = 1;
    GUuid userUid = 2;
}

message GRemoveAdminGrantsRequest {
    GAuthentication authentication = 1;
    GUuid userUid = 2;
}

message GBlockUserRequest {
    GAuthentication authentication = 1;
    GUuid userUid = 2;
}

message GUnblockUserRequest {
    GAuthentication authentication = 1;
    GUuid userUid = 2;
}
